# fastapi-study

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: index.md  setup.md
fastapi_study/: app.py  models.py  schemas.py
tests/: test_app.py
